--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "turn-point-app",
   "version": "1.0.0",
   "scripts": {
-    "install:client": "cd client && npm install",
-    "install:server": "cd server && npm install",
+    "install:client": "cd client && npm install --legacy-peer-deps",
+    "install:server": "cd server && npm run setup",
     "install": "concurrently \"npm run install:client\" \"npm run install:server\"",
     "start:client": "cd client && npm start",
     "start:server": "cd server && npm start",
