--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "wait:db":  "wait-on tcp:5432",
-    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:dev": "prisma migrate dev --name \"init\"",
     "prisma:generate": "prisma generate",
     "db:init": "npm run prisma:migrate:dev && npm run prisma:generate",
     "start:db": "docker-compose up -d",
-    "start:server" : "node index.js",
-    "start": "npm run start:db && echo 'Waiting for DB...' && npm run wait:db && echo 'DB is ready. Initializing database...' && npm run db:init && echo 'Starting server...' && node index.js",
-    "dev": "npm run db:init && nodemon index.js"
+    "stop:db": "docker-compose down",
+    "setup:db": "npm run start:db && npm run wait:db && npm run db:init",
+    "start:server": "nodemon index.js",
+    "stop:server": "npm run stop:db",
+    "dev": "npm run setup:db && nodemon index.js",
+    "setup": "npm install && npm run setup:db",
+    "stop": "npm run stop:db",
+    "start": "npm run start:server"
   },
   "author": "",
   "license": "ISC",
